--- a/nasil-kullanilir.html
+++ b/nasil-kullanilir.html
@@ -133,24 +133,19 @@
                         </div>
                         <div class="text-article t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                             <article>
-                                <p><span>İlk Uygulama:</span></p>
-                                <p>ZoneTAPE Soft Silikon Bant, uygulandığı bölgede 48 saat boyunca çıkarılmadan kalmalıdır.</p><br>
-								<p><span>Erken Değişim Gerektiren Durumlar:</span></p>
-                                <p>Scar (yara izi) ya da keloid oluşumunun eskiliğine bağlı olarak bant: </p>
-								<p>Ciltte aşırı yağlanma</p>
-								<p>Terleme</p>
-								<p>Yaz aylarında yüksek sıcaklık</p>
-								<p>Günlük sosyal/fiziksel aktiviteler</p>
+                                <p>
+                                    ZoneTAPE Soft Silikon Bant , gerekli alana uygulandıktan sonra 48 saat boyunca çıkarılmamalıdır. Ancak;
+                                </p>
+                                <p>
+                                    Vücut doğal yağ dengesi ve yağlanması, günlük sosyal aktiviteler neticesinde oluşabilecek terleme, yaz aylarındaki yüksek hava sıcaklığı vb. gibi etkenlerden dolayı ürün 48 saatten erken bir sürede uygulandığı bölgeden ayrılırsa yenisi ile değiştirilmesi gerekebilir.
+                                </p>
+                                <p>
+                                    Ayrıca kullanıcı tarafından günlük banyo tercih ediliyorsa her banyo sonrasında yine ürün yenisi ile değiştirilmelidir.
+                                </p>
+                                <p>
+                                    ZoneTAPE Soft Silikon Bant , scar / kelloid oluşumunun eskiliğine bağlı olmakla birlikte en az 2 ile 6 ay süresince kullanılmalıdır. Bu süre zarfında uygulama bölgesi istenilen iyileşmeye ulaşınca ürün sonlandırılmalıdır.
+                                </p>
                             </article><br>
-							<article>
-                                <p><span>Banyo Yapılması Durumunda:</span></p>
-                                <p>Günlük banyo yapan kullanıcılar, her banyo sonrasında bandı yenisiyle değiştirmelidir.</p><br>
-								<p><span>Kullanım Süresi:</span></p>
-                                <p>Scar (yara izi) ya da keloid oluşumunun eskiliğine bağlı olarak bant:</p>
-								<p>Ciltte aşırı yağlanma</p>
-								<p>En az 2 ila 6 ay süreyle düzenli olarak kullanılmalıdır.</p>
-								<p>İstenilen iyileşme sağlandığında kullanım sonlandırılabilir.</p><br>
-                            </article>
 							<article>
                                 <p><span>Kontrendikasyonlar (Kullanılmaması Gereken Durumlar)</span></p>
                                 <p>Silikon alerjisi olan bireylerde kullanılmamalıdır.</p>
