--- a/index.html
+++ b/index.html
@@ -128,28 +128,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide">
-                    <div class="img">
-                        <img src="assets/images/slider-sezaryan.jpg" alt="" />
-                        <div class="container">
-                            <div class="row">
-                                <div class="col col-12 col-lg-2"></div>
-                                <div class="col col-12 col-lg-8">
-                                    <div class="text-article">
-                                        <div class="text">
-                                            <h1>
-                                                Sezaryen İzi Kaderiniz Değil
-                                                <span>Zonetape İle İzlerin Görünürlüğünü Azaltın</span>
-                                            </h1>
-                                            <p>Anneliğinizi gururla taşıyın, izlerinizi değil. ZoneTAPE Soft Silikon Bant, sezaryen sonrası cilt bakımında etkili ve güvenilir bir çözüm sunar. Hassas ciltlerde bile güvenle kullanılabilir.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col col-12 col-lg-2"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 				<div class="swiper-slide">
                     <div class="img">
                         <img src="assets/images/slider-kirisiklik.jpg" alt="" />
@@ -164,6 +142,28 @@
                                                 <span>Kolajen Desteğiyle Yaşlanmayı Geciktirin!</span>
                                             </h1>
                                             <p>Zonetape Soft, cildinize gençlik ve tazelik kazandırmak için özel olarak geliştirilmiş bir silikon banttır. İnce çizgi ve kırışıklıkların görünümünü azaltırken, kolajen üretimini destekleyerek cildinizin daha sıkı ve elastik olmasına yardımcı olur.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col col-12 col-lg-2"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="img">
+                        <img src="assets/images/slider-sezaryan.jpg" alt="" />
+                        <div class="container">
+                            <div class="row">
+                                <div class="col col-12 col-lg-2"></div>
+                                <div class="col col-12 col-lg-8">
+                                    <div class="text-article">
+                                        <div class="text">
+                                            <h1>
+                                                Sezaryen İzi Kaderiniz Değil
+                                                <span>Zonetape İle İzlerin Görünürlüğünü Azaltın</span>
+                                            </h1>
+                                            <p>Anneliğinizi gururla taşıyın, izlerinizi değil. ZoneTAPE Soft Silikon Bant, sezaryen sonrası cilt bakımında etkili ve güvenilir bir çözüm sunar. Hassas ciltlerde bile güvenle kullanılabilir.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -225,7 +225,7 @@
             <div class="swiper operations-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-scar-keloid.jpg" alt="SKAR KELOID İZLERİ" />
                             </div>
@@ -242,7 +242,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-yüz-alin-kirisikliklari.jpg" alt="YÜZ, ALIN VE BOYUN KIRIŞIKLIKLARI" />
                             </div>
@@ -259,7 +259,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-estetik-operasyonlar.jpg" alt="ESTETİK OPERASYONLAR ÖNCESİ VE SONRASI İZLER" />
                             </div>
@@ -276,7 +276,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-karin-kol-bacak.jpg" alt="KARIN KOL BACAK GERME OPERASYONU SONRASI İZLER" />
                             </div>
@@ -293,7 +293,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-sezeryan.jpg" alt="SEZARYEN DOĞUM SONRASI İZLER" />
                             </div>
@@ -310,7 +310,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-goz-kapagi.jpg" alt="GÖZ KAPAĞI AMELİYATI" />
                             </div>
@@ -327,7 +327,7 @@
                         </a>
                     </div>
 					<div class="swiper-slide">
-                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-yanik-sonrasi-izler.jpg" alt="YANIK SONRASI İZLER" />
                             </div>
@@ -344,7 +344,7 @@
                         </a>
                     </div>
 					<div class="swiper-slide">
-                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-ben-aldirma.jpg" alt="BEN ALDIRMA SONRASI İZLER" />
                             </div>
