--- a/urunler.html
+++ b/urunler.html
@@ -122,7 +122,7 @@
                     <div class="text" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1400">
                         <div class="head">
                             <h2>
-                                ZONETAPE SİLİKON BANT
+                                ZONETAPE SOFT SİLİKON BANT
                                 <span>Tüm Cerrahi Operasyonlarda Kullanılmaktadır</span>
                             </h2>
                         </div>
@@ -157,7 +157,7 @@
                     <div class="col col-12 col-lg-10">
                         <div class="head t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                             <h2>
-                                ZONETAPE SİLİKON BANT
+                                ZONETAPE SOFT SİLİKON BANT
                                 <span>Tüm Cerrahi Operasyonlarda Kullanılmaktadır</span>
                             </h2>
                         </div>
@@ -166,7 +166,7 @@
                     <div class="col col-12 col-lg-6" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <div class="text-article">
                             <article>
-                                <p><span>ZoneTAPE Silikon Bant, cerrahi operasyonlar, yaralanmalar, yanıklar veya doğum sonrası süreçlerde oluşan izlerin görünümünü azaltmaya yardımcı olan tıbbi bir üründür. Özel silikon yapısı sayesinde cilde zarar vermeden uygulanır ve hiçbir kimyasal yapıştırıcı içermez. Bu özelliğiyle hem güvenli hem de cilt dostudur.</span></p>
+                                <p><span>ZoneTAPE Soft Silikon Bant, cerrahi operasyonlar, yaralanmalar, yanıklar veya doğum sonrası süreçlerde oluşan izlerin görünümünü azaltmaya yardımcı olan tıbbi bir üründür. Özel silikon yapısı sayesinde cilde zarar vermeden uygulanır ve hiçbir kimyasal yapıştırıcı içermez. Bu özelliğiyle hem güvenli hem de cilt dostudur.</span></p>
                            </article>
                         </div>
                     </div>
