--- a/dokumanlar.html
+++ b/dokumanlar.html
@@ -135,20 +135,20 @@
     <div class="documents-section">
         <div class="container">
             <div class="row">
-                <div class="col col-12 col-lg-4" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                <div class="col col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <div class="item">
                         <div class="img">
                             <img src="assets/images/fda.png" alt="">
                         </div>
                         <div class="text-article">
                             <article>
-                                <p><span>FDA (Food and Drug Administration) ZoneTAPE soft silikon bant</span></p>
+                                <p><span>FDA (Food and Drug Administration) ZoneTAPE soft silikon bant</span></p>
                                 <p>ABD’de Sağlık ve İnsan hizmetleri departmanına bağlı olarak çalışan FDA’ ya yapılan başvuru sonrası , belirtilen kategoriler altında piyasaya arz edilen ürünlerin, insan veya diğer canlıların kullanımına sunulması sonrasında, gerekli görülen koşullarda, gerçekleşen tüm aşamalarla değerlendirilmiş olup tüm koşullara uygun olduğu tespit edilerek belgeyi almaya hak kazanmıştır. Tarih; 18.11.2024</p>
                             </article>
                         </div>
                     </div>
                 </div>
-                <div class="col col-12 col-lg-4" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                <div class="col col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                     <div class="item">
                         <div class="img">
                             <img src="assets/images/ce.png" alt="" />
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-12 col-lg-4" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                <div class="col col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                     <div class="item">
                         <div class="img">
                             <img src="assets/images/uts.png" alt="" />
@@ -174,38 +174,21 @@
                         </div>
                     </div>
                 </div>
+                <div class="col col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                    <div class="item">
+                        <div class="img">
+                            <img src="assets/images/iso13485.png" alt="" />
+                        </div>
+                        <div class="text-article">
+                            <article>
+                                <p><span>ISO 13485</span></p>
+                                <p>Zonetape, tıbbi cihaz standartlarına uygun olarak üretilen bir üründür. Üretim süreçlerimiz ISO 13485 kalite yönetim sistemi esaslarına göre yürütülmekte olup; ürün güvenliği, etkinliği ve uluslararası mevzuatlara uyum garanti altına alınmaktadır. ISO 13485 sayesinde Zonetape’in tasarım, üretim, paketleme ve dağıtım aşamalarında hasta güvenliği ön planda tutulur ve sürekli iyileştirme sağlanır.</p>
+                            </article>
+                        </div>
+                    </div>
+                </div>
                 <div class="swiper documents-swiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                                <div class="item">
-                                    <img src="assets/images/document-fda.jpg" alt="" />
-                                    <span class="icon">
-                                        <img src="assets/images/pdf-icon.svg" alt="" />
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                <div class="item">
-                                    <img src="assets/images/document-ce.jpg" alt="" />
-                                    <span class="icon">
-                                        <img src="assets/images/pdf-icon.svg" alt="" />
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                                <div class="item">
-                                    <img src="assets/images/document-iso.jpg" alt="" />
-                                    <span class="icon">
-                                        <img src="assets/images/pdf-icon.svg" alt="" />
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
                         <div class="swiper-slide">
                             <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                                 <div class="item">
