--- a/estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant copy.html
+++ b/estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant copy.html
@@ -111,14 +111,14 @@
                     <div class="head">
                         <h2>
                             ZoneTAPE Soft Silikon Bant
-                            <span>Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber</span>
+                            <span>Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları</span>
                         </h2>
                     </div>
                     <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <article>
-                            <p><span>Sezaryen doğum sonrası en çok dikkat edilmesi gereken konulardan biri, dikiş bölgesinin sağlıklı bir şekilde iyileşmesi ve izlerin zamanla daha az görünür hale gelmesidir. Her annenin cilt yapısı farklı olsa da, doğru ürünlerle yapılan düzenli bakım, hem iyileşme sürecini hızlandırır hem de estetik açıdan daha konforlu bir sonuç sağlar.</span></p>
-                            <p>ZoneTAPE Soft Silikon Bant, sezaryen sonrası dikiş ve iz bakımı için özel olarak geliştirilmiş bir üründür. Silikon bantlar tıp dünyasında uzun yıllardır güvenle kullanılmakta ve cilt üzerindeki iyileşmeyi destekleyen en etkili yöntemlerden biri olarak kabul edilmektedir. ZoneTAPE’in yumuşak ve esnek yapısı, özellikle karın bölgesinde rahat bir kullanım imkânı sunar. Günlük hareketleri kısıtlamaz, ciltte tahrişe yol açmaz ve dikiş bölgesinde koruyucu bir bariyer oluşturarak izlerin daha düz, daha yumuşak ve daha solgun görünmesine yardımcı olur.</p>
-                            <p>Sezaryen sonrası izlerin görünümü sadece estetik bir mesele değil, aynı zamanda annenin psikolojik konforu açısından da önemlidir. ZoneTAPE Soft Silikon Bant, düzenli kullanımda cildin nem dengesini korur, kızarıklığı ve kaşıntıyı azaltır, böylece annelerin iyileşme sürecini daha rahat geçirmelerini sağlar. Ayrıca tekrar kullanılabilir yapısıyla ekonomik bir çözüm sunar. Dikiş bölgesinin temiz tutulması, doktor önerilerine uyulması, dengeli beslenme ve bol su tüketimiyle birlikte ZoneTAPE Soft Silikon Bant kullanımı, sezaryen sonrası bakımın en etkili desteklerinden biridir. Böylece anneler hem sağlıklarını koruyabilir hem de sezaryen izlerinin zamanla çok daha az fark edilir hale gelmesini sağlayabilir. </p>
+                            <p><span>Estetik cerrahi operasyonları, kişinin kendini daha iyi hissetmesi ve estetik görünümünü desteklemesi için tercih edilen yöntemlerdir. Ancak her cerrahi işlemde olduğu gibi, operasyon sonrası dikiş izleri ve ciltte oluşabilecek skar veya keloid riskleri en önemli konular arasında yer alır. Bu süreçte iz bakımına özen göstermek, hem estetik sonuçların kalıcılığı hem de kişinin psikolojik konforu açısından büyük önem taşır.</span></p>
+                            <p>Cerrahi sonrası izlerin sağlıklı bir şekilde iyileşmesi için ilk adım, doktorun önerdiği bakım ve hijyen kurallarına dikkat etmektir. Dikiş bölgesinin enfeksiyondan korunması, cildin daha düzgün bir şekilde onarılmasını sağlar. Ancak bunun yanında, izlerin kalıcı hale gelmemesi için ek destek ürünlerinden faydalanmak gerekir.</p>
+                            <p>ZoneTAPE Soft Silikon Bant, estetik cerrahi sonrası iz bakımında etkili çözümlerden biridir. Silikon bantlar, tıbbi alanda uzun süredir güvenle kullanılan ve izlerin görünümünü azaltmaya yardımcı olan yöntemler arasında kabul edilir. ZoneTAPE, cilt üzerinde ince ve esnek bir tabaka oluşturarak nem dengesini korur. Bu sayede izlerin daha yumuşak, düz ve solgun görünmesine destek olur. Ayrıca skar ve keloid oluşumunu önlemede önemli bir rol oynar. ZoneTAPE’in yumuşak yapısı, operasyon sonrası hassas cilde zarar vermez. Günlük hareketleri kısıtlamadan kullanılabilir ve tekrar kullanılabilen özelliği ile uzun vadeli bir bakım imkânı sunar. Düzenli kullanımda kızarıklık, kaşıntı ve gerginlik hissini azaltarak iyileşme sürecini daha konforlu hale getirir. Sonuç olarak, estetik cerrahi sonrası izlerin yönetiminde hijyen, sağlıklı yaşam alışkanlıkları ve düzenli bakım kadar doğru ürün kullanımı da büyük önem taşır. ZoneTAPE Soft Silikon Bant, skar ve keloid oluşumunun önlenmesine yardımcı olurken aynı zamanda daha pürüzsüz ve estetik bir cilt görünümüne destek olur. Bu sayede kişiler, operasyon sonrası süreci çok daha rahat ve güvenle yaşayabilir..</p>
                         </article>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
         </div>
     </div><!-- blog-banner -->
     <div class="blog-banner-img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-        <img src="assets/images/sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.jpg" alt="Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber" />
+        <img src="assets/images/estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant.jpg" alt="Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları" />
     </div><!-- blog-banner-img -->
     <div class="blog-list">
         <div class="container">
