--- a/karin-kol-bacak-germe-operasyonu-sonrasi-izler.html
+++ b/karin-kol-bacak-germe-operasyonu-sonrasi-izler.html
@@ -111,14 +111,13 @@
                     <div class="head">
                         <h2>
                             ZoneTAPE Soft Silikon Bant
-                            <span>Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları</span>
+                            <span>KARIN KOL BACAK GERME OPERASYONU SONRASI İZLER</span>
                         </h2>
                     </div>
                     <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <article>
-                            <p><span>Estetik cerrahi operasyonları, kişinin kendini daha iyi hissetmesi ve estetik görünümünü desteklemesi için tercih edilen yöntemlerdir. Ancak her cerrahi işlemde olduğu gibi, operasyon sonrası dikiş izleri ve ciltte oluşabilecek skar veya keloid riskleri en önemli konular arasında yer alır. Bu süreçte iz bakımına özen göstermek, hem estetik sonuçların kalıcılığı hem de kişinin psikolojik konforu açısından büyük önem taşır.</span></p>
-                            <p>Cerrahi sonrası izlerin sağlıklı bir şekilde iyileşmesi için ilk adım, doktorun önerdiği bakım ve hijyen kurallarına dikkat etmektir. Dikiş bölgesinin enfeksiyondan korunması, cildin daha düzgün bir şekilde onarılmasını sağlar. Ancak bunun yanında, izlerin kalıcı hale gelmemesi için ek destek ürünlerinden faydalanmak gerekir.</p>
-                            <p>ZoneTAPE Soft Silikon Bant, estetik cerrahi sonrası iz bakımında etkili çözümlerden biridir. Silikon bantlar, tıbbi alanda uzun süredir güvenle kullanılan ve izlerin görünümünü azaltmaya yardımcı olan yöntemler arasında kabul edilir. ZoneTAPE, cilt üzerinde ince ve esnek bir tabaka oluşturarak nem dengesini korur. Bu sayede izlerin daha yumuşak, düz ve solgun görünmesine destek olur. Ayrıca skar ve keloid oluşumunu önlemede önemli bir rol oynar. ZoneTAPE’in yumuşak yapısı, operasyon sonrası hassas cilde zarar vermez. Günlük hareketleri kısıtlamadan kullanılabilir ve tekrar kullanılabilen özelliği ile uzun vadeli bir bakım imkânı sunar. Düzenli kullanımda kızarıklık, kaşıntı ve gerginlik hissini azaltarak iyileşme sürecini daha konforlu hale getirir. Sonuç olarak, estetik cerrahi sonrası izlerin yönetiminde hijyen, sağlıklı yaşam alışkanlıkları ve düzenli bakım kadar doğru ürün kullanımı da büyük önem taşır. ZoneTAPE Soft Silikon Bant, skar ve keloid oluşumunun önlenmesine yardımcı olurken aynı zamanda daha pürüzsüz ve estetik bir cilt görünümüne destek olur. Bu sayede kişiler, operasyon sonrası süreci çok daha rahat ve güvenle yaşayabilir..</p>
+                            <p><span>Karın, kol veya bacak germe ameliyatlarının ardından oluşan izler, doğru bakım ile zamanla silikleşebilir. ZoneTAPE soft silikon bant, bu süreçte en hassas yardımcınız olmak üzere geliştirilmiştir. </span></p>
+                            <p>Tıbbi sınıf yumuşak silikon yapısı, cilt yüzeyinde nemli bir ortam oluşturarak iyileşme sürecini destekler. Düzenli kullanımda sertleşmiş dokunun yumuşamasına, cilt tonunun dengelenmesine ve izlerin görünümünün azalmasına yardımcı olur.</p>
                         </article>
                     </div>
                 </div>
@@ -144,7 +143,7 @@
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                    <a class="item" href="blog.html">
+                    <a class="item" href="skar-keloid-izleri.html">
                         <div class="img"><img src="assets/images/blog-tiny-1.png" alt="" /></div>
                         <div class="text">
                             <p>ZoneTAPE Soft Silikon Bant: İz ve Skar Tedavisinde Etkili Çözüm</p>
