--- a/skar-keloid-izleri.html
+++ b/skar-keloid-izleri.html
@@ -111,14 +111,13 @@
                     <div class="head">
                         <h2>
                             ZoneTAPE Soft Silikon Bant
-                            <span>Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber</span>
+                            <span>Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları</span>
                         </h2>
                     </div>
                     <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <article>
-                            <p><span>Sezaryen doğum sonrası en çok dikkat edilmesi gereken konulardan biri, dikiş bölgesinin sağlıklı bir şekilde iyileşmesi ve izlerin zamanla daha az görünür hale gelmesidir. Her annenin cilt yapısı farklı olsa da, doğru ürünlerle yapılan düzenli bakım, hem iyileşme sürecini hızlandırır hem de estetik açıdan daha konforlu bir sonuç sağlar.</span></p>
-                            <p>ZoneTAPE Soft Silikon Bant, sezaryen sonrası dikiş ve iz bakımı için özel olarak geliştirilmiş bir üründür. Silikon bantlar tıp dünyasında uzun yıllardır güvenle kullanılmakta ve cilt üzerindeki iyileşmeyi destekleyen en etkili yöntemlerden biri olarak kabul edilmektedir. ZoneTAPE’in yumuşak ve esnek yapısı, özellikle karın bölgesinde rahat bir kullanım imkânı sunar. Günlük hareketleri kısıtlamaz, ciltte tahrişe yol açmaz ve dikiş bölgesinde koruyucu bir bariyer oluşturarak izlerin daha düz, daha yumuşak ve daha solgun görünmesine yardımcı olur.</p>
-                            <p>Sezaryen sonrası izlerin görünümü sadece estetik bir mesele değil, aynı zamanda annenin psikolojik konforu açısından da önemlidir. ZoneTAPE Soft Silikon Bant, düzenli kullanımda cildin nem dengesini korur, kızarıklığı ve kaşıntıyı azaltır, böylece annelerin iyileşme sürecini daha rahat geçirmelerini sağlar. Ayrıca tekrar kullanılabilir yapısıyla ekonomik bir çözüm sunar. Dikiş bölgesinin temiz tutulması, doktor önerilerine uyulması, dengeli beslenme ve bol su tüketimiyle birlikte ZoneTAPE Soft Silikon Bant kullanımı, sezaryen sonrası bakımın en etkili desteklerinden biridir. Böylece anneler hem sağlıklarını koruyabilir hem de sezaryen izlerinin zamanla çok daha az fark edilir hale gelmesini sağlayabilir. </p>
+                            <p><span>Skar ve keloid izleri, ciltte yaralanma veya cerrahi sonrası oluşan kalın, kabarık ve bazen rahatsızlık veren yara izleridir. Keloidler normal skarlardan farklı olarak sınırlarını aşabilir ve estetik açıdan sorun yaratabilir. Bu izlerin görünümünü azaltmak ve iyileşme sürecini desteklemek için silikon bantlar etkili bir çözümdür.</span></p>
+                            <p>ZoneTAPE Soft Silikon Bant, ciltte nem bariyeri oluşturarak yara dokusunu yumuşatır, aşırı kollajen birikimini önleyerek skar ve keloid oluşumunu azaltır. Kızarıklık ve sertliği hafifletir, kimyasal yapıştırıcı içermediği için hassas ciltlerde güvenle kullanılabilir. Yara tamamen iyileştikten ve doktor onayı alındıktan sonra, temiz ve kuru cilde uygulanır. Günde 12-72 saat takılır ve genellikle en az 8 hafta düzenli kullanılır. Skar ve keloid izlerinin yönetiminde pratik, konforlu ve etkili bir çözümdür</p>
                         </article>
                     </div>
                 </div>
@@ -127,7 +126,7 @@
         </div>
     </div><!-- blog-banner -->
     <div class="blog-banner-img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-        <img src="assets/images/sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.jpg" alt="Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber" />
+        <img src="assets/images/estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant.jpg" alt="Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları" />
     </div><!-- blog-banner-img -->
     <div class="blog-list">
         <div class="container">
@@ -144,7 +143,7 @@
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                    <a class="item" href="skar-keloid-izleri.html">
+                    <a class="item" href="skar-keloid-izleri.html>
                         <div class="img"><img src="assets/images/blog-tiny-1.png" alt="" /></div>
                         <div class="text">
                             <p>ZoneTAPE Soft Silikon Bant: İz ve Skar Tedavisinde Etkili Çözüm</p>
