--- a/yuz-alin-ve-boyun-kirisikliklari.html
+++ b/yuz-alin-ve-boyun-kirisikliklari.html
@@ -111,14 +111,13 @@
                     <div class="head">
                         <h2>
                             ZoneTAPE Soft Silikon Bant
-                            <span>Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber</span>
+                            <span>YÜZ, ALIN VE BOYUN KIRIŞIKLIKLARI</span>
                         </h2>
                     </div>
                     <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <article>
-                            <p><span>Sezaryen doğum sonrası en çok dikkat edilmesi gereken konulardan biri, dikiş bölgesinin sağlıklı bir şekilde iyileşmesi ve izlerin zamanla daha az görünür hale gelmesidir. Her annenin cilt yapısı farklı olsa da, doğru ürünlerle yapılan düzenli bakım, hem iyileşme sürecini hızlandırır hem de estetik açıdan daha konforlu bir sonuç sağlar.</span></p>
-                            <p>ZoneTAPE Soft Silikon Bant, sezaryen sonrası dikiş ve iz bakımı için özel olarak geliştirilmiş bir üründür. Silikon bantlar tıp dünyasında uzun yıllardır güvenle kullanılmakta ve cilt üzerindeki iyileşmeyi destekleyen en etkili yöntemlerden biri olarak kabul edilmektedir. ZoneTAPE’in yumuşak ve esnek yapısı, özellikle karın bölgesinde rahat bir kullanım imkânı sunar. Günlük hareketleri kısıtlamaz, ciltte tahrişe yol açmaz ve dikiş bölgesinde koruyucu bir bariyer oluşturarak izlerin daha düz, daha yumuşak ve daha solgun görünmesine yardımcı olur.</p>
-                            <p>Sezaryen sonrası izlerin görünümü sadece estetik bir mesele değil, aynı zamanda annenin psikolojik konforu açısından da önemlidir. ZoneTAPE Soft Silikon Bant, düzenli kullanımda cildin nem dengesini korur, kızarıklığı ve kaşıntıyı azaltır, böylece annelerin iyileşme sürecini daha rahat geçirmelerini sağlar. Ayrıca tekrar kullanılabilir yapısıyla ekonomik bir çözüm sunar. Dikiş bölgesinin temiz tutulması, doktor önerilerine uyulması, dengeli beslenme ve bol su tüketimiyle birlikte ZoneTAPE Soft Silikon Bant kullanımı, sezaryen sonrası bakımın en etkili desteklerinden biridir. Böylece anneler hem sağlıklarını koruyabilir hem de sezaryen izlerinin zamanla çok daha az fark edilir hale gelmesini sağlayabilir. </p>
+                            <p><span>Yaşlanma süreciyle birlikte cildimizde ortaya çıkan kırışıklıklar, alın, yüz ve boyun bölgelerinde en çok dikkat çeken estetik sorunlardan biridir. Güneş ışınları, çevresel faktörler, yerçekimi ve zamanın etkisiyle ciltteki kolajen ve elastin lifler azalır, bu da ciltte ince çizgiler ve derin kırışıklıklar oluşmasına neden olur. </span></p>
+                            <p>Son yıllarda, silikon bant teknolojisi cilt bakımında yenilikçi bir çözüm olarak öne çıkmıştır. Zonetape Soft Silikon Bant, özellikle alın, yüz ve boyundaki kırışıklıkların görünümünü azaltmaya yardımcı olur. Silikon bant, cilt yüzeyinde ince bir tabaka oluşturarak nemi hapseder ve cildin elastikiyetini artırır. Bu sayede, kırışıklıkların belirginliği azalır, cilt daha pürüzsüz ve dolgun bir görünüm kazanır.</p>
                         </article>
                     </div>
                 </div>
@@ -127,7 +126,7 @@
         </div>
     </div><!-- blog-banner -->
     <div class="blog-banner-img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-        <img src="assets/images/sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.jpg" alt="Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber" />
+        <img src="assets/images/estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant.jpg" alt="Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları" />
     </div><!-- blog-banner-img -->
     <div class="blog-list">
         <div class="container">
