--- a/goz-kapagi-ameliyati.html
+++ b/goz-kapagi-ameliyati.html
@@ -111,14 +111,13 @@
                     <div class="head">
                         <h2>
                             ZoneTAPE Soft Silikon Bant
-                            <span>Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber</span>
+                            <span>GÖZ KAPAĞI AMELİYATI</span>
                         </h2>
                     </div>
                     <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <article>
-                            <p><span>Sezaryen doğum sonrası en çok dikkat edilmesi gereken konulardan biri, dikiş bölgesinin sağlıklı bir şekilde iyileşmesi ve izlerin zamanla daha az görünür hale gelmesidir. Her annenin cilt yapısı farklı olsa da, doğru ürünlerle yapılan düzenli bakım, hem iyileşme sürecini hızlandırır hem de estetik açıdan daha konforlu bir sonuç sağlar.</span></p>
-                            <p>ZoneTAPE Soft Silikon Bant, sezaryen sonrası dikiş ve iz bakımı için özel olarak geliştirilmiş bir üründür. Silikon bantlar tıp dünyasında uzun yıllardır güvenle kullanılmakta ve cilt üzerindeki iyileşmeyi destekleyen en etkili yöntemlerden biri olarak kabul edilmektedir. ZoneTAPE’in yumuşak ve esnek yapısı, özellikle karın bölgesinde rahat bir kullanım imkânı sunar. Günlük hareketleri kısıtlamaz, ciltte tahrişe yol açmaz ve dikiş bölgesinde koruyucu bir bariyer oluşturarak izlerin daha düz, daha yumuşak ve daha solgun görünmesine yardımcı olur.</p>
-                            <p>Sezaryen sonrası izlerin görünümü sadece estetik bir mesele değil, aynı zamanda annenin psikolojik konforu açısından da önemlidir. ZoneTAPE Soft Silikon Bant, düzenli kullanımda cildin nem dengesini korur, kızarıklığı ve kaşıntıyı azaltır, böylece annelerin iyileşme sürecini daha rahat geçirmelerini sağlar. Ayrıca tekrar kullanılabilir yapısıyla ekonomik bir çözüm sunar. Dikiş bölgesinin temiz tutulması, doktor önerilerine uyulması, dengeli beslenme ve bol su tüketimiyle birlikte ZoneTAPE Soft Silikon Bant kullanımı, sezaryen sonrası bakımın en etkili desteklerinden biridir. Böylece anneler hem sağlıklarını koruyabilir hem de sezaryen izlerinin zamanla çok daha az fark edilir hale gelmesini sağlayabilir. </p>
+                            <p><span>Göz kapağı estetiği (blefaroplasti) sonrası oluşan ince cerrahi izlerin görünümünü azaltmak için ZoneTAPE soft silikon bant etkili bir çözümdür. Cilt yüzeyinde koruyucu bir tabaka oluşturarak nemi hapseder, iz dokusunun sertleşmesini ve belirginleşmesini önlemeye yardımcı olur. Kimyasal yapıştırıcı içermediği için göz çevresi gibi hassas bölgelerde güvenle kullanılabilir. </span></p>
+                            <p>Yumuşak ve esnek yapısıyla cilde uyum sağlar, gün boyu konfor sunar. Dikişler alındıktan ve doktor onayı alındıktan sonra kullanılmaya başlanmalı, temiz ve kuru cilde uygulanmalıdır. Gözle görülür sonuçlar için günde en az 12 saat, 8 hafta boyunca düzenli kullanım önerilir. ZoneTAPE, iyileşme sürecini destekler ve izlerin belirginliğini azaltır. Kullanım öncesi mutlaka hekiminize danışın.</p>
                         </article>
                     </div>
                 </div>
@@ -127,7 +126,7 @@
         </div>
     </div><!-- blog-banner -->
     <div class="blog-banner-img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-        <img src="assets/images/sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.jpg" alt="Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber" />
+        <img src="assets/images/estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant.jpg" alt="Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları" />
     </div><!-- blog-banner-img -->
     <div class="blog-list">
         <div class="container">
