--- a/yanik-ve-yaralanma-sonrasi-cilt-onarimi-zone-soft-silikon-bant.html
+++ b/yanik-ve-yaralanma-sonrasi-cilt-onarimi-zone-soft-silikon-bant.html
@@ -144,7 +144,7 @@
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                    <a class="item" href="blog.html">
+                    <a class="item" href="skar-keloid-izleri.html">
                         <div class="img"><img src="assets/images/blog-tiny-1.png" alt="" /></div>
                         <div class="text">
                             <p>ZoneTAPE Soft Silikon Bant: İz ve Skar Tedavisinde Etkili Çözüm</p>
