--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="swiper operations-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a class="product-card" href="skar-keloid-izleri.html" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html#skar-keloid-izleri" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-scar-keloid.jpg" alt="SKAR KELOID İZLERİ" />
                             </div>
@@ -242,7 +242,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="yuz-alin-ve-boyun-kirisikliklari.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html#yuz-alin-ve-boyun-kirisikliklari" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-yüz-alin-kirisikliklari.jpg" alt="YÜZ, ALIN VE BOYUN KIRIŞIKLIKLARI" />
                             </div>
@@ -259,7 +259,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant.html" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html#estetik-operasyonlar-oncesi-ve-sonrasi-izler" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-estetik-operasyonlar.jpg" alt="ESTETİK OPERASYONLAR ÖNCESİ VE SONRASI İZLER" />
                             </div>
@@ -276,7 +276,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="karin-kol-bacak-germe-operasyonu-sonrasi-izler.html" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html#karin-kol-bacak-germe-operasyonu-sonrasi-izler" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-karin-kol-bacak.jpg" alt="KARIN KOL BACAK GERME OPERASYONU SONRASI İZLER" />
                             </div>
@@ -293,7 +293,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="sezaryan-sonrasi-bakim-ve-iz-yonetimi-zonetape-soft-silikon-bant.html" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html#sezaryen-dogum-sonrasi-izler" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-sezeryan.jpg" alt="SEZARYEN DOĞUM SONRASI İZLER" />
                             </div>
@@ -310,7 +310,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="goz-kapagi-ameliyati.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html#goz-kapagi-ameliyati" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-goz-kapagi.jpg" alt="GÖZ KAPAĞI AMELİYATI" />
                             </div>
@@ -327,7 +327,7 @@
                         </a>
                     </div>
 					<div class="swiper-slide">
-                        <a class="product-card" href="yanik-ve-yaralanma-sonrasi-cilt-onarimi-zone-soft-silikon-bant.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html#yanik-sonrasi-izler" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-yanik-sonrasi-izler.jpg" alt="YANIK SONRASI İZLER" />
                             </div>
@@ -344,7 +344,7 @@
                         </a>
                     </div>
 					<div class="swiper-slide">
-                        <a class="product-card" href="bel-aldirma-sonrasi-izler.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="urunler.html#ben-aldirma-sonrasi-izler" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/zonetape-ben-aldirma.jpg" alt="BEN ALDIRMA SONRASI İZLER" />
                             </div>
