--- a/urunler.html
+++ b/urunler.html
@@ -187,7 +187,7 @@
             <div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="img" id="skar-keloid-izleri" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/zonetape-scar-keloid.jpg" alt="SKAR KELOID İZLERİ" />
                     </div>
                     <div class="row">
@@ -216,7 +216,7 @@
             <div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="img" id="yuz-alin-ve-boyun-kirisikliklari" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/zonetape-yüz-alin-kirisikliklari.jpg" alt="YÜZ, ALIN VE BOYUN KIRIŞIKLIKLARI" />
                     </div>
                     <div class="row">
@@ -245,7 +245,7 @@
 			<div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="img" id="estetik-operasyonlar-oncesi-ve-sonrasi-izler" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/zonetape-estetik-operasyonlar.jpg" alt="ESTETİK OPERASYONLAR ÖNCESİ VE SONRASI İZLER" />
                     </div>
                     <div class="row">
@@ -274,7 +274,7 @@
 			<div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="img" id="karin-kol-bacak-germe-operasyonu-sonrasi-izler" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/zonetape-karin-kol-bacak.jpg" alt="KARIN KOL BACAK GERME OPERASYONU SONRASI İZLER" />
                     </div>
                     <div class="row">
@@ -303,7 +303,7 @@
 			<div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="img" id="sezaryen-dogum-sonrasi-izler" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/zonetape-sezeryan.jpg" alt="KARIN KOL BACAK GERME OPERASYONU SONRASI İZLER" />
                     </div>
                     <div class="row">
@@ -332,7 +332,7 @@
 			<div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="img" id="goz-kapagi-ameliyati" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/zonetape-goz-kapagi.jpg" alt="GÖZ KAPAĞI AMELİYATI" />
                     </div>
                     <div class="row">
@@ -361,7 +361,7 @@
 			<div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="img" id="yanik-sonrasi-izler" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/zonetape-yanik-sonrasi-izler.jpg" alt="YANIK SONRASI İZLER" />
                     </div>
                     <div class="row">
@@ -390,7 +390,7 @@
 			<div class="row">
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="img" id="ben-aldirma-sonrasi-izler" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/zonetape-ben-aldirma.jpg" alt="BEN ALDIRMA SONRASI İZLER" />
                     </div>
                     <div class="row">
