--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <article class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                             <p><span>Tıbbi etik kurallarına bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunuyor, güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılıyoruz.</span></p>
                             <p>Amacımız, insanların yaşam kalitesini yükseltmek ve sağlık ihtiyaçlarına en doğru çözümleri sunmaktır. Bu doğrultuda yenilikçi yaklaşımlar geliştirerek, küresel ölçekte değerlerimizi ve çalışmalarımızı sürdürmeyi hedefliyoruz.</p>
-                            <a class="detail-btn" href="medzone.html">
+                            <a class="detail-btn" href="hakkimizda.html">
                                 MEDZONE HAKKINDA
                             </a>
                         </article>
@@ -605,7 +605,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="https://www.amazon.com.tr/ZoneTAPE-4cmx1-5mt-Estetik-Operasyon-Sezaryen-Yan%C4%B1k-Ben/dp/B0DZ6SNYK2?ref_=v_sp_product_dpx" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                            <a href="https://www.amazon.com.tr/ZoneTAPE-Silikon-Bant-Estetik-Sezaryen-Yan%C4%B1k-Ben-Ald%C4%B1rma/dp/B09CH66MFG/ref=sr_1_1?dib=eyJ2IjoiMSJ9.kJ-KwrSe8upHQi7gjl9fyTOHQeABZ9DMnXUvDy_PyoE.lFH-GohSajyGUweuAP00KSOjPmFUBerknJ1TmWGg9gY&dib_tag=se&m=ASAFXGQAW4QQN&marketplaceID=A33AVAJ2PDY3EV&qid=1758371215&s=merchant-items&sr=1-1" target="_blank" class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                                 <img src="assets/images/tes1.png" alt="">
                             </a>
                         </div>
